// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary 1`] = `
<div>
  <h4>
    Viewing 
    3
     
    expenses
    : 
    $1,939.29
  </h4>
</div>
`;

exports[`Should render ExpensesSummary with 0 expenses 1`] = `
<div>
  <h4>
    Viewing 
    0
     
    expenses
    : 
    $0.00
  </h4>
</div>
`;

exports[`Should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h4>
    Viewing 
    1
     
    expense
    : 
    $1.95
  </h4>
</div>
`;
